--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>VScode</title>
 </head>
 <body>
-    <li>555</li>
-    <li>888</li>
+    <div class="block"></div>
     <article>
-        <p><span class="text-block">mabe only englishing</span></p>
+        <p><span class="text-block">New code you can see</span></p>
     </article>
+    
     <script src="scrypt.js"></script>
 </body>
 </html>
